--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           and creating intuitive interfaces that engage and delight users.
         </p>
         <div class="btn-box">
-          <a href="#" class="btn">Hire Me</a>
-          <a href="#" class="btn">Let's Talk</a>
+          <a href="mailto:dennis00725@gmail.com" class="btn">Hire Me</a>
+          <a href="#contact" class="btn">Let's Talk</a>
         </div>
       </div>
       <div class="home-sci">
